# aoc19

./: CHANGELOG.md  README.md  aoc19.cabal  stack.yaml
app/: Main.hs
src/: Aoc19.hs  Intcode.hs  Numbers.hs  Parsing.hs
src/Solve/: Day1.hs  Day10.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day7b.hs  Day8.hs  Day9.hs
